# chidori

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.githooks/: pre-commit
.github/workflows/: npm-publish.yml
docs/superpowers/plans/: 2026-05-08-schema-backed-extraction.md
docs/superpowers/specs/: 2026-05-06-rust-web-to-markdown-cli-design.md
npm/chidori-fetch-darwin-arm64/: package.json
npm/chidori-fetch-darwin-x64/: package.json
npm/chidori-fetch-linux-arm64/: package.json
npm/chidori-fetch-linux-x64/: package.json
npm/chidori-fetch-win32-arm64/: package.json
npm/chidori-fetch-win32-x64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-arm64/: package.json
npm/win32-x64/: package.json
reports/parity/: capability-matrix.md  latest.json  latest.md
src/: cleaner.rs  cli.rs  document.rs  error.rs  extractor.rs  fetcher.rs  lib.rs  main.rs  markdown.rs  metadata.rs  output.rs  standardize.rs
src/extractor/: mod.rs  schema.rs  scoring.rs  types.rs  util.rs
src/extractor/sites/: common.rs  discourse.rs  github.rs  known.rs  mastodon.rs  microblog.rs  mod.rs  (+3 more)
tests/: chidori-bin.test.mjs  cli.rs  defuddle_parity.rs  fetcher.rs  npm-platform-packages.test.mjs  npm-publish-workflow.test.mjs  pipeline.rs  reference_parity.rs
tests/fixtures/: basic_article.html  code_article.html  noisy_article.html
tools/: parity-corpus.json  parity-harness.mjs  parity-harness.test.mjs  prepare-platform-package.mjs  sync-npm-platform-version.mjs
(+32 files in other folders)
